--- a/py33/Dockerfile
+++ b/py33/Dockerfile
@@ -1,7 +1,9 @@
 FROM ubuntu
+# make sure the package repository is up to date
+RUN echo "deb http://archive.ubuntu.com/ubuntu precise main universe" > /etc/apt/sources.list
 RUN apt-get update
 RUN apt-get install python-software-properties build-essential -y
 RUN add-apt-repository ppa:fkrull/deadsnakes -y
 RUN apt-get update
 RUN apt-get install python3.3 python3.3-dev -y
-RUN apt-get install python-pip
+RUN apt-get install python-pip -y
